kustomize/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: kfto-remote-provider

spec:
  selector:
    app: kfto-remote-provider

  ports:
  - port: 8321
    targetPort: 8321
    protocol: TCP
    name: http
